overflow bugs

--- a/style.css
+++ b/style.css
@@ -98,8 +98,6 @@ a:hover {
 
 /* navbar */
 .navbar {
-  max-width: 100%;
-  height: min-content;
   padding: 0;
 }
 .nav-header {
@@ -122,7 +120,6 @@ a:hover {
 }
 
 .nav-links a {
-  padding: 0.5rem;
   font-size: 1.5rem;
 }
 
@@ -131,7 +128,6 @@ a:hover {
 }
 
 .nav-links li {
-  padding: 0 0.2rem;
   margin: 0.1rem;
 }
 
@@ -165,12 +161,12 @@ a:hover {
   }
   .nav-links {
     list-style: none;
-    display: inline;
-    z-index: 10;
+    display: block;
   }
   .nav-links li {
     display: inline;
     margin: 0;
+    padding: 0.5rem;
   }
   .nav-center {
     display: flex;
